platform/src/objects/Invoice_PO__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VNet_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VNet Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice/POs</relationshipLabel>
        <relationshipName>Invoice_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_PO__c</fullName>
        <label>Vendor Invoice/PO #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Invoice/POs</relationshipLabel>
        <relationshipName>Invoice_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice/PO</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>WF Invoice/PO#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice/POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>